# ENERES-100-HW-Libraries

./: .gitignore  README.md  UniversalNumbers.py  Universal_Numbers.py  __init__.py  build.xsh  pyproject.toml  setup.py  testing.py
ENERES_100_HW_Libraries.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
eneres_100_hw_libraries/: UniversalNumbers.py  __init__.py  convert.py
eneres_100_hw_libraries/src/: convert.py
eneres_100_hw_libraries/tests/: test_UniversalNumber.py  test_real.py  test_reprs.py  test_sigfigs.py
src/eneres_100_hw_libraries/: UniversalNumbers.py  convert.py
tests/: test_real.py  test_reprs.py
